--- a/Fietsen.html
+++ b/Fietsen.html
@@ -5,28 +5,29 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Van Straeten</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="/css/fietsen.css">
+    <script src="/js/fietsen.js"> </script>
 </head>
 <body>
 
-<div class="logo">
+<img class="logo"  src="/photo/logo.png"/>
 
-    <img src="/photo/logo.png"/>
-        
-</div>    
 
-<div class="Navbar">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-    <a href="/index.html">Home</a>
-    <a class="active" href="/Fietsen.html">Fietsen</a>
-    <a href="/Toebehoren.html">Toebehoren</a>
-    <a href="/Acties.html">Acties</a>
-    <a href="/TweedeHands.html">TweedeHands</a>
-    <a href="/Team.html">Team</a>
-    <a href="/contact.html">Contact</a>
     
-</div class="Navbar">
-
+<div class="topnav" id="myTopnav">
+  <a href="/index.html">Home</a>
+  <a class="active" href="/Fietsen.html">Fietsen</a>
+  <a href="/Toebehoren.html">Toebehoren</a>
+  <a href="/Acties.html">Acties</a>
+  <a href="/TweedeHands.html">TweedeHands</a>
+  <a href="/Team.html">Team</a>
+  <a href="/contact.html">Contact</a>
+  <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+    <i class="fa fa-bars"></i>
+  </a>
+</div>
 
 
 </body>
